--- a/_config.yml
+++ b/_config.yml
@@ -22,7 +22,7 @@ repository               : "academicpages/academicpages.github.io"
 #               Additional customization can be done by editing /_includes/author-profile.html
 author:
   # Biographic information
-  avatar           : "../images/profile.jpg"
+  avatar           : "/images/profile.jpg"
   name             : "Chehun Han"
   pronouns         : # example: "she/her"  
   bio              : "I major in AI 🤖 and have interest in autonomous driving🚘 and 3D vision."
