--- a/_config.yml
+++ b/_config.yml
@@ -22,9 +22,8 @@ repository               : "academicpages/academicpages.github.io"
 #               Additional customization can be done by editing /_includes/author-profile.html
 author:
   # Biographic information
-  avatar           : "/images/profile.jpg"
+  avatar           : "profile.jpg"
   name             : "Chehun Han"
-  pronouns         : # example: "she/her"  
   bio              : "I major in AI 🤖 and have interest in autonomous driving🚘 and 3D vision."
   location         : "Seoul, Korea"
   employer         : "EWHA Womans University"
