--- a/_config.yml
+++ b/_config.yml
@@ -45,7 +45,7 @@ author:
   # codepen          : # Username
   # dribbble         : # Username
   github           : "nyangche"
-  linkedin         : "www.linkedin.com/in/chehunhan1216"
+  linkedin         : "https://www.linkedin.com/in/chehunhan1216?lipi=urn%3Ali%3Apage%3Ad_flagship3_profile_view_base_contact_details%3BotP96hlWTEy4EzAwXnfLmg%3D%3D"
   # kaggle           : # Username  
   # stackoverflow    : # User number or user number and name (i.e., use "1" or "1/jeff-atwood")    
 
