--- a/_config.yml
+++ b/_config.yml
@@ -45,7 +45,7 @@ author:
   # codepen          : # Username
   # dribbble         : # Username
   github           : "chehun16"
-  linkedin         : "www.linkedin.com/in/chehunhan1216"
+  linkedin         : "chehunhan1216"
   # kaggle           : # Username  
   # stackoverflow    : # User number or user number and name (i.e., use "1" or "1/jeff-atwood")    
 
