--- a/_config.yml
+++ b/_config.yml
@@ -24,7 +24,7 @@ author:
   # Biographic information
   avatar           : "photo_0.jpg"
   name             : "Chehun Han"
-  bio              : "I major in AI 🤖 and have interest in autonomous driving🚘 and 3D vision."
+  bio              : "I major in AI 🤖 and have interest in autonomous driving🚘 and 3D Reconstruction."
   location         : "Seoul, Korea"
   employer         : "EWHA Womans University"
   uri              : # URL
