--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,7 @@ title                    : "Jinwook's Page"
 title_separator          : "-"
 name                     : &name "Jinwook's Page"
 description              : &description "I major in AI and have interest in 🚘autonomous driving and 3D Reconstruction."
-url                      : https://chehun16.github.io 
+url                      : https://jojinwook.github.io/my-website
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
 repository               : "chehun16/chehun16.github.io"
 
@@ -22,7 +22,7 @@ repository               : "chehun16/chehun16.github.io"
 #               Additional customization can be done by editing /_includes/author-profile.html
 author:
   # Biographic information
-  avatar           : "/my-website/images/jo.jpg"
+  avatar           : "jo.jpg"
   name             : "Jinwook Jo"
   bio              : "한번 뿐인 인생 행복하게 살아보자!"
   location         : "Seoul, Korea"
